Stop attribution control wrapping on layers with attribution text

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -529,10 +529,21 @@ table {
 
 /* Rules for Leaflet maps */
 
-.leaflet-control-attribution a.disabled {
-  color: #99c9dc;
-  cursor: default;
-  text-decoration: none;
+.leaflet-control-attribution {
+  a.disabled {
+    color: #99c9dc;
+    cursor: default;
+    text-decoration: none;
+  }
+
+  ul.secondary-actions {
+    float: left;
+    margin-right: 5px;
+
+    &:only-child {
+      margin-right: 0px;
+    }
+  }
 }
 
 .site-index .leaflet-top,
